--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ numpy==1.24.2
 six==1.16.0
 beautifulsoup4==4.12.0
 lxml==4.9.2
+spacy==3.5.1
+nltk==3.8.1
+fr-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.5.0/fr_core_news_sm-3.5.0-py3-none-any.whl
+gensim==4.3.1
+omegaconf==2.3.0
